--- a/src/components/Show/Show.css
+++ b/src/components/Show/Show.css
@@ -1,18 +1,20 @@
 .Show {
-  margin: 1em;
-  height: 100%;
-  width: 100%;
+  border-radius: 20%;
+  padding: 1em;
+  margin: 1em .2%;
+  width: 300px;
   border: 1px solid white;
   display: flex;
   flex-direction: column;
   align-content: flex-start;
+  font-size: .5em;
 }
 
 .Show >* {
   list-style-type: none;
+  padding: 5px;
 }
 .Show >a >img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
+  border-radius: 20%;
+  padding: 1em;
 }
