--- a/src/components/ShowList/ShowList.css
+++ b/src/components/ShowList/ShowList.css
@@ -2,5 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   list-style-type: none;
-  gap: 15px;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: stretch;
 }
