--- a/src/components/ShowList/ShowList.css
+++ b/src/components/ShowList/ShowList.css
@@ -1,8 +1,5 @@
 .showList-Container {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
   list-style-type: none;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: stretch;
 }
