--- a/src/components/Show/Show.css
+++ b/src/components/Show/Show.css
@@ -1,20 +1,25 @@
 .Show {
   border-radius: 20%;
-  padding: 1em;
-  margin: 1em .2%;
-  width: 300px;
+  padding: 15px 25px;
+  margin: 10px 10px;
+  height: 420px;
+  width: 400px;
   border: 1px solid white;
   display: flex;
   flex-direction: column;
   align-content: flex-start;
-  font-size: .5em;
+  font-size: 14px;
 }
 
 .Show >* {
-  list-style-type: none;
-  padding: 5px;
+  word-wrap: break-word;
+  overflow: hidden;
+  text-overflow: clip;
+
 }
+
 .Show >a >img {
+  height: 150px;
   border-radius: 20%;
   padding: 1em;
 }
