--- a/src/components/ShowList/ShowList.css
+++ b/src/components/ShowList/ShowList.css
@@ -1,5 +1,5 @@
 .showList-Container {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  display: flex;
+  flex-wrap: wrap;
   list-style-type: none;
 }
